crates/vue_oxc_toolkit/fixtures/error/irrecoverable-directive.vue
<template>
  <div :key="a 1 )`Hi '`"></div>
</template>

<script lang="ts" setup></script>

<style></style>
